# tg-news

./: .gitignore  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  create_seen_posts.sql  feeds.opml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: db.rs  main.rs  models.rs  server.rs
client/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/app/news/[id]/: page.tsx
client/components/: theme-provider.tsx
client/components/atoms/: IconCalendar.tsx  Logo.tsx  ThemeToggle.tsx  Typography.tsx
client/components/molecules/: ArticleCard.tsx  CurrencyTicker.tsx
client/components/organisms/: ArticleHeader.tsx  Footer.tsx  Header.tsx  NewsFeed.tsx  Sidebar.tsx  SidebarWithCurrencies.tsx
client/hooks/: useCurrencies.ts  useNews.ts  useNewsById.ts
client/lib/: api.ts  currencyApi.ts
client/styles/: globals.css
