[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = [ "Vladimir Berezhenv <vberezhnev@proton.me>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
opml = "1.1.6"
rand = "0.8.5"
reqwest = "0.12.9"
rss = "2.0.9"
teloxide = "0.13.0"
tokio = { version = "1.41.0", features = ["full"] }
chatgpt_rs = "1.2.3"
sea-orm = { version = "1.1.1", features = ["chrono"] }
actix = "0.13.5"
actix-web = "4.11.0"
chrono = "0.4.41"
rand_chacha = "0.9.0"
