[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = [ "Vladimir Berezhenv <vberezhnev@proton.me>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
opml = "1.1.6"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
rss = "2.0.9"
teloxide = "0.13.0"
tokio = { version = "1.41.0", features = ["full"] }
chatgpt_rs = "1.2.3"
sea-orm = { version = "1.1.1", features = ["chrono", "sqlx-postgres", "runtime-tokio-native-tls", "runtime-actix-rustls"] }
actix = "0.13.5"
actix-web = "4.11.0"
chrono = "0.4.41"
rand_chacha = "0.9.0"
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"

[dev-dependencies]
sea-orm-migration = "1.1"
